--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                                 placeholder="First Name">
                         </div>
                     </div>
-
+                    <span class="input-group-btn" 
+                            style="width:0px;"></span> 
                     <div class="form-group row">
                         <div class="col-sm-2">
                             <label for="txtLastname" class="col-form-label">
