--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <form>
                 <fieldset class="border">
                     <legend class="w-auto">Part 1: Patient Information</legend>
+                    <div>
                     <div class="form-group row">
                         <div class="col-sm-2">
                             <label for="txtFirstname" class="col-form-label">
@@ -25,7 +26,7 @@
                         </div>
                         <div class="col-sm-10">
                             <input type="text" id="txtFirstname" name="txtFirstname" required class="form-control"
-                                placeholder="First Name">
+                                placeholder="Firstt Name">
                         </div>
                     </div>
                     <span class="input-group-btn" 
@@ -41,7 +42,7 @@
                                 placeholder="Last Name">
                         </div>
                     </div>
-
+                    </div>
                     <div>
                         <fieldset class="border form-group">
                             <div class="row">
