--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <form>
                 <fieldset class="border">
                     <legend class="w-auto">Part 1: Patient Information</legend>
-                    <div>
+                    
                     <div class="form-group row">
                         <div class="col-sm-2">
                             <label for="txtFirstname" class="col-form-label">
@@ -26,12 +26,9 @@
                         </div>
                         <div class="col-sm-10">
                             <input type="text" id="txtFirstname" name="txtFirstname" required class="form-control"
-                                placeholder="Firstt Name">
+                                placeholder="First Name">
                         </div>
                     </div>
-                    <span class="input-group-btn" 
-                            style="width:0px;"></span> 
-                    <div class="form-group row">
                         <div class="col-sm-2">
                             <label for="txtLastname" class="col-form-label">
                                 <span>Last Name: </span>
@@ -42,7 +39,7 @@
                                 placeholder="Last Name">
                         </div>
                     </div>
-                    </div>
+                    
                     <div>
                         <fieldset class="border form-group">
                             <div class="row">
