--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                             <input type="text" id="txtFirstname" name="txtFirstname" required class="form-control"
                                 placeholder="First Name">
                         </div>
+                        <div class="input-group-prepend">
+                          <span class="form-group-text">-</span>
+                          </div>
                     </div>
                         <div class="col-sm-2">
                             <label for="txtLastname" class="col-form-label">
