--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h1>Welcome to the Covid Assessment Website!</h1>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <meta name = "viewport" content = "width=device-width" initial.scale=1>
     </header>
     <section>
         <h2>Please fill out this form: </h2>
@@ -26,11 +27,8 @@
                         </div>
                         <div class="col-sm-10">
                             <input type="text" id="txtFirstname" name="txtFirstname" required class="form-control"
-                                placeholder="First Name">
+                                placeholder="Firstt Name">
                         </div>
-                        <div class="input-group-prepend">
-                          <span class="form-group-text">-</span>
-                          </div>
                     </div>
                         <div class="col-sm-2">
                             <label for="txtLastname" class="col-form-label">
