--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         <h1>Welcome to the Covid Assessment Website!</h1>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <meta name = "viewport" content = "width=device-width" initial.scale=1>
     </header>
     <section>
         <h2>Please fill out this form: </h2>
@@ -18,7 +17,6 @@
             <form>
                 <fieldset class="border">
                     <legend class="w-auto">Part 1: Patient Information</legend>
-                    
                     <div class="form-group row">
                         <div class="col-sm-2">
                             <label for="txtFirstname" class="col-form-label">
@@ -27,9 +25,11 @@
                         </div>
                         <div class="col-sm-10">
                             <input type="text" id="txtFirstname" name="txtFirstname" required class="form-control"
-                                placeholder="Firstt Name">
+                                placeholder="First Name">
                         </div>
                     </div>
+
+                    <div class="form-group row">
                         <div class="col-sm-2">
                             <label for="txtLastname" class="col-form-label">
                                 <span>Last Name: </span>
@@ -40,7 +40,7 @@
                                 placeholder="Last Name">
                         </div>
                     </div>
-                    
+
                     <div>
                         <fieldset class="border form-group">
                             <div class="row">
@@ -271,7 +271,7 @@
                     </div>
 
                     <div class="row form-group">
-                        <label for="diagnosis" class="col-sm-2 col-form-label">
+                        <label for="diagnosis" class="col-sm-2 col-md-6 col-form-label">
                             Have you had a diagnosis of COVID-19 in the last 10 days?
                         </label>
                         <div>
