--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                     <div class="row form-group">
                         <label for="contact" class="col-sm-2 col-md-4 col-lg-6 col-form-label">
                             <span>Have you had contact (within 6 feet for > 15 minutes), or caring for someone who is
-                                diagnosed <br>
+                                diagnosed
                                 with COVID-19 in the last 14 days and were not wearing proper personal protective
                                 equipment? </span>
                         </label>
