--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                                         Which countries? (separate with commas)
                                     </label>
                                 </div>
-                                <div class="col-sm-2 col-md-4 col-lg-6 col-form-label">
+                                <div class="col-sm-10">
                                     <input type="text" id="txtcountry" name="txtcountry" required class="form-control"
                                         placeholder="USA">
                                 </div>
