--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                                 <span>First Name: </span>
                             </label>
                         </div>
-                        <div class="col-sm-2">
+                        <div class="col-sm-10 col-md-4 col-lg-4">
                             <input type="text" id="txtFirstname" name="txtFirstname" required class="form-control"
                                 placeholder="First Name">
                         </div>
