--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
                         </div>
                         <div class="col-sm-10 col-md-6 col-lg-6">
                             <input type="text" id="txtFirstname" name="txtFirstname" required class="form-control"
-                                placeholder="First Name">
+                                placeholder="Firstt Name">
                         </div>
                     </div>
 
                     <div class="form-group row">
-                        <div class="col-sm-2 col-md-6 col-lg-6">
+                        <div class="col-sm-2">
                             <label for="txtLastname" class="col-form-label">
                                 <span>Last Name: </span>
                             </label>
