--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section>
         <h2>Please fill out this form: </h2>
         <article>
-            <form>
+            <form class="form-inline">
                 <fieldset class="border">
                     <legend class="w-auto">Part 1: Patient Information</legend>
                     <div class="form-group row">
@@ -24,9 +24,9 @@
                                 <span>First Name: </span>
                             </label>
                         </div>
-                        <div class="col-sm-10 col-md-5 col-lg-5">
+                        <div class="col-sm-10">
                             <input type="text" id="txtFirstname" name="txtFirstname" required class="form-control"
-                                placeholder="Firstt Name">
+                                placeholder="First Name">
                         </div>
                     </div>
 
@@ -36,12 +36,13 @@
                                 <span>Last Name: </span>
                             </label>
                         </div>
-                        <div class="col-sm-10 col-md-5 col-lg-5">
+                        <div class="col-sm-10">
                             <input type="text" id="txtLastname" name="txtLastname" required class="form-control"
                                 placeholder="Last Name">
                         </div>
                     </div>
-
+                    </form>
+                <form>
                     <div>
                         <fieldset class="border form-group">
                             <div class="row">
