--- a/index.html
+++ b/index.html
@@ -7,14 +7,10 @@
 
 <body>
     <header>
-        <h1>Welcome to the Covvid Assessment Website!</h1>
-        <meta charset="utf-8">
+        <h1>Welcome to the Covid Assessment Website!</h1>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </header>
     <section>
         <h2>Please fill out this form: </h2>
@@ -22,8 +18,8 @@
             <form class ="form-inline">
                 <fieldset class="border">
                     <legend class="w-auto">Part 1: Patient Information</legend>
-                    <div class="form-group row">
-                        <div class="col-sm-2">
+                    <div class = "row">
+                    <div class="form-group col-sm-2">
                             <label for="txtFirstname" class="col-form-label">
                                 <span>First Name: </span>
                             </label>
@@ -33,7 +29,7 @@
                                 placeholder="First Name">
                         </div>
                     </div>
-
+                    
                     <div class="form-group row">
                         <div class="col-sm-2">
                             <label for="txtLastname" class="col-form-label">
