--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <section>
         <h2>Please fill out this form: </h2>
         <article>
-            <form class ="form-inline">
+             <form>
                 <fieldset class="border">
                     <legend class="w-auto">Part 1: Patient Information</legend>
-                    <div class = "row">
-                    <div class="form-group col-sm-2">
+                    <div class="form-group row">
+                        <div class="col-sm-2">
                             <label for="txtFirstname" class="col-form-label">
                                 <span>First Name: </span>
                             </label>
@@ -27,6 +27,18 @@
                         <div class="col-sm-10">
                             <input type="text" id="txtFirstname" name="txtFirstname" required class="form-control"
                                 placeholder="First Name">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <div class="col-sm-2">
+                            <label for="txtLastname" class="col-form-label">
+                                <span>Last Name: </span>
+                            </label>
+                        </div>
+                        <div class="col-sm-10">
+                            <input type="text" id="txtLastname" name="txtLastname" required class="form-control"
+                                placeholder="Last Name">
                         </div>
                     </div>
                     
