--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <fieldset class="border">
                     <legend class="w-auto">Part 1: Patient Information</legend>
                     <div class="form-group row">
+                        <div class="form-check form-check-inline">
                         <div class="col-sm-2">
                             <label for="txtFirstname" class="col-form-label">
                                 <span>First Name: </span>
@@ -38,10 +39,10 @@
                         </div>
                         <div class="col-sm-10">
                             <input type="text" id="txtLastname" name="txtLastname" required class="form-control"
-                                placeholder="Last Name">
+                                placeholder="Last aName">
                         </div>
                     </div>
-                    
+                    </div>
                     <div class="form-group row">
                         <div class="col-sm-2">
                             <label for="txtLastname" class="col-form-label">
