--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Covid Center Website</title>
 </head>
 
-<body>
+<body text-align=center;>
     <header>
         <h1>Welcome to the Covid Assessment Website!</h1>
         <meta charset="utf-8">
@@ -16,7 +16,7 @@
     <section>
         <h2>Please fill out this form: </h2>
         <article>
-             <form>
+             <form display=inline-block;>
                 <fieldset class="border">
                     <legend class="w-auto">Part 1: Patient Information</legend>
                     <div class="form-group row">
