--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
 <head>
     <title>Covid Center Website</title>
 </head>
-
+<style>
+    span { 
+            display: block; 
+            overflow: hidden; 
+            padding: 0px 4px 0px 6px; 
+        } 
+          
+        input { 
+            width: 70%; 
+        } 
+    </style>
 <body text-align=center;>
     <header>
         <h1>Welcome to the Covid Assessment Website!</h1>
