--- a/index.html
+++ b/index.html
@@ -5,19 +5,16 @@
     <title>Covid Center Website</title>
 </head>
 <style>
-    span { 
-            display: block; 
+    body { 
+            display: inline-block; 
             overflow: hidden; 
             padding: 0px 4px 0px 6px; 
         } 
-          
-        input { 
-            width: 70%; 
-        } 
+         
     </style>
 <body text-align=center;>
     <header>
-        <h1>Welcome to the Covid Assessment Website!</h1>
+        <h1>Welcome to the Covid aAssessment Website!</h1>
         <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
