--- a/index.html
+++ b/index.html
@@ -8,18 +8,13 @@
 <body>
     <header>
         <h1>Welcome to the Covid Assessment Website!</h1>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     </header>
     <section>
         <h2>Please fill out this form: </h2>
         <article>
-            <form class="form-inline">
+            <form class = "form-inline">
                 <fieldset class="border">
                     <legend class="w-auto">Part 1: Patient Information</legend>
                     <div class="form-group row">
@@ -45,6 +40,7 @@
                                 placeholder="Last Name">
                         </div>
                     </div>
+
                     <div>
                         <fieldset class="border form-group">
                             <div class="row">
@@ -262,7 +258,7 @@
                     <div class="row form-group">
                         <label for="contact" class="col-sm-2 col-md-4 col-lg-6 col-form-label">
                             <span>Have you had contact (within 6 feet for > 15 minutes), or caring for someone who is
-                                diagnosed
+                                diagnosed <br>
                                 with COVID-19 in the last 14 days and were not wearing proper personal protective
                                 equipment? </span>
                         </label>
