--- a/index.html
+++ b/index.html
@@ -14,28 +14,28 @@
     <section>
         <h2>Please fill out this form: </h2>
         <article>
-            <form class = "form-inline">
+            <form>
                 <fieldset class="border">
                     <legend class="w-auto">Part 1: Patient Information</legend>
                     <div class="form-group row">
-                        <div class="col-sm-2">
+                        <div class="col-sm-2 col-md-3">
                             <label for="txtFirstname" class="col-form-label">
                                 <span>First Name: </span>
                             </label>
                         </div>
-                        <div class="col-sm-10">
+                        <div class="col-sm-3 col-md-4">
                             <input type="text" id="txtFirstname" name="txtFirstname" required class="form-control"
                                 placeholder="First Name">
                         </div>
                     </div>
 
                     <div class="form-group row">
-                        <div class="col-sm-2">
+                        <div class="col-sm-2 col-md-3">
                             <label for="txtLastname" class="col-form-label">
                                 <span>Last Name: </span>
                             </label>
                         </div>
-                        <div class="col-sm-10">
+                        <div class="col-sm-3 col-md-4">
                             <input type="text" id="txtLastname" name="txtLastname" required class="form-control"
                                 placeholder="Last Name">
                         </div>
@@ -120,7 +120,7 @@
                         <h4>Please answer the following questions to the best of your ability: </h4>
                     </div>
                     <div class="row form-group">
-                        <label for="dd-fever" class="col-sm-2 col-md-4 col-lg-6 col-form-label">
+                        <label for="dd-fever" class="col-sm-2 col-form-label">
                             Have you had any fever or chills in the past 2 weeks?
                         </label>
                         <div>
@@ -132,7 +132,7 @@
                     </div>
 
                     <div class="row form-group">
-                        <label for="dd-cough" class="col-sm-2 col-md-4 col-lg-6 col-form-label">
+                        <label for="dd-cough" class="col-sm-2 col-form-label">
                             Have you had any coughing in the past 2 weeks?
                         </label>
                         <div>
@@ -144,7 +144,7 @@
                     </div>
 
                     <div class="row form-group">
-                        <label for="dd-breath" class="col-sm-2 col-md-4 col-lg-6 col-form-label">
+                        <label for="dd-breath" class="col-sm-2 col-form-label">
                             Have you had any shortness of breath or difficulty breathing in the past 2
                             weeks?
                         </label>
@@ -157,7 +157,7 @@
                     </div>
 
                     <div class="row form-group">
-                        <label for="dd-fatigue" class="col-sm-2 col-md-4 col-lg-6 col-form-label">
+                        <label for="dd-fatigue" class="col-sm-2 col-form-label">
                             Have you had any fatigue in the past 2 weeks?
                         </label>
                         <div>
@@ -169,7 +169,7 @@
                     </div>
 
                     <div class="row form-group">
-                        <label for="dd-muscle" class="col-sm-2 col-md-4 col-lg-6 col-form-label">
+                        <label for="dd-muscle" class="col-sm-2 col-form-label">
                             Have you had any muscle or body aches in the past 2 weeks?
                         </label>
                         <div>
@@ -181,7 +181,7 @@
                     </div>
 
                     <div class="row form-group">
-                        <label for="dd-headache" class="col-sm-2 col-md-4 col-lg-6 col-form-label">
+                        <label for="dd-headache" class="col-sm-2 col-form-label">
                             Have you had any headaches in the past 2 weeks?
                         </label>
                         <div>
@@ -193,7 +193,7 @@
                     </div>
 
                     <div class="row form-group">
-                        <label for="dd-taste" class="col-sm-2 col-md-4 col-lg-6 col-form-label">
+                        <label for="dd-taste" class="col-sm-2 col-form-label">
                             Have you had any loss of taste or smell in the past 2 weeks?
                         </label>
                         <div>
@@ -205,7 +205,7 @@
                     </div>
 
                     <div class="row form-group">
-                        <label for="dd-throat" class="col-sm-2 col-md-4 col-lg-6 col-form-label">
+                        <label for="dd-throat" class="col-sm-2 col-form-label">
                             Have you had a sore throat anytime in the past 2 weeks?
                         </label>
                         <div>
@@ -217,7 +217,7 @@
                     </div>
 
                     <div class="row form-group">
-                        <label for="dd-congestion" class="col-sm-2 col-md-4 col-lg-6 col-form-label">
+                        <label for="dd-congestion" class="col-sm-2 col-form-label">
                             Have you had any congestion or a runny nose in the past 2 weeks?
                         </label>
                         <div>
@@ -229,7 +229,7 @@
                     </div>
 
                     <div class="row form-group">
-                        <label for="dd-nausea" class="col-sm-2 col-md-4 col-lg-6 col-form-label">
+                        <label for="dd-nausea" class="col-sm-2 col-form-label">
                             Have you had any nausea or vomiting in the past 2 weeks?
                         </label>
                         <div>
@@ -241,7 +241,7 @@
                     </div>
 
                     <div class="row form-group">
-                        <label for="dd-diarrhea" class="col-sm-2 col-md-4 col-lg-6 col-form-label">
+                        <label for="dd-diarrhea" class="col-sm-2 col-form-label">
                             Have you had any diarrhea in the past 2 weeks?
                         </label>
                         <div>
@@ -256,7 +256,7 @@
                 <fieldset>
                     <legend class="w-auto">Part 3: Other Questions</legend>
                     <div class="row form-group">
-                        <label for="contact" class="col-sm-2 col-md-4 col-lg-6 col-form-label">
+                        <label for="contact" class="col-sm-2 col-form-label">
                             <span>Have you had contact (within 6 feet for > 15 minutes), or caring for someone who is
                                 diagnosed <br>
                                 with COVID-19 in the last 14 days and were not wearing proper personal protective
@@ -271,7 +271,7 @@
                     </div>
 
                     <div class="row form-group">
-                        <label for="diagnosis" class="col-sm-2 col-md-4 col-lg-6 col-form-label">
+                        <label for="diagnosis" class="col-sm-2 col-form-label">
                             Have you had a diagnosis of COVID-19 in the last 10 days?
                         </label>
                         <div>
@@ -285,7 +285,7 @@
                     <div>
                         <fieldset class="border form-group">
                             <div class="row">
-                                <label for="country" class="col-sm-2 col-md-4 col-lg-6 col-form-label">
+                                <label for="country" class="col-sm-2 col-form-label">
                                     Have you traveled to any countries in the past 14 days?
                                 </label>
                                 <div>
@@ -295,7 +295,7 @@
                                     </select>
                                 </div>
                                 <div>
-                                    <label for="txtcountry" class="col-sm-2 col-md-4 col-lg-6 col-form-label">
+                                    <label for="txtcountry" class="col-sm-2 col-form-label">
                                         Which countries? (separate with commas)
                                     </label>
                                 </div>
@@ -309,7 +309,7 @@
                 </div>
 
                 <div class="row form-group">
-                    <label for="socialized" class="col-sm-2 col-md-4 col-lg-6 col-form-label">
+                    <label for="socialized" class="col-sm-2 col-form-label">
                         Have you socialized with a group of 6 or more people in the last 14 days?
                     </label>
                     <div>
@@ -320,7 +320,7 @@
                     </div>
                 </div>
                 <div class="row form-group">
-                    <label for="txttemp" class="col-sm-2 col-md-4 col-lg-6 col-form-label">
+                    <label for="txttemp" class="col-sm-2 col-form-label">
                         Current Temperature:
                     </label>
                     <div class="col-sm-10">
