--- a/index.html
+++ b/index.html
@@ -16,26 +16,26 @@
         <article>
             <form>
                 <fieldset class="border">
-                    <legend class="w-auto">Part 1: Patient Information</legend>
+                    <legend class="w-auto">Part 1: Patienat Information</legend>
                     <div class="form-group row">
-                        <div class="col-sm-2 col-md-3">
+                        <div class="col-sm-2 col-md-3 col-xs-6">
                             <label for="txtFirstname" class="col-form-label">
                                 <span>First Name: </span>
                             </label>
                         </div>
-                        <div class="col-sm-3 col-md-4">
+                        <div class="col-sm-3 col-md-4 col-xs-6">
                             <input type="text" id="txtFirstname" name="txtFirstname" required class="form-control"
                                 placeholder="First Name">
                         </div>
                     </div>
 
                     <div class="form-group row">
-                        <div class="col-sm-2 col-md-3">
+                        <div class="col-sm-2 col-md-3 col-xs-6">
                             <label for="txtLastname" class="col-form-label">
                                 <span>Last Name: </span>
                             </label>
                         </div>
-                        <div class="col-sm-3 col-md-4">
+                        <div class="col-sm-3 col-md-4 col-xs-6">
                             <input type="text" id="txtLastname" name="txtLastname" required class="form-control"
                                 placeholder="Last Name">
                         </div>
