--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 <head>
     <title>Covid Center Website</title>
 </head>
-
+<style>
+    .form-group row
+    {
+        text-align:right;
+    }
+    
+    </style>
 <body>
     <header>
         <h1>Welcome to the Covid Assessment Website!</h1>
@@ -16,7 +22,7 @@
         <article>
             <form>
                 <fieldset class="border">
-                    <legend class="w-auto">Part 1: Patienat Information</legend>
+                    <legend class="w-auto">Part 1: Patient Information</legend>
                     <div class="form-group row">
                         <div class="col-sm-2 col-md-3 col-xs-6">
                             <label for="txtFirstname" class="col-form-label">
