--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <title>Covid Center Website</title>
 </head>
 <style>
-    .form-group row
+    .form-group
+    {
+        text-align:right;
+    }
+    .row
     {
         text-align:right;
     }
