--- a/index.html
+++ b/index.html
@@ -5,13 +5,8 @@
     <title>Covid Center Website</title>
 </head>
 <style>
-    .form-group
-    {
-        text-align:right;
-    }
-    .row
-    {
-        text-align:right;
+   .row
+    { display:block;
     }
     
     </style>
@@ -28,24 +23,24 @@
                 <fieldset class="border">
                     <legend class="w-auto">Part 1: Patient Information</legend>
                     <div class="form-group row">
-                        <div class="col-sm-2 col-md-3 col-xs-6">
+                        <div class="col-sm-2 col-md-3">
                             <label for="txtFirstname" class="col-form-label">
                                 <span>First Name: </span>
                             </label>
                         </div>
-                        <div class="col-sm-3 col-md-4 col-xs-6">
+                        <div class="col-sm-10 col-md-4">
                             <input type="text" id="txtFirstname" name="txtFirstname" required class="form-control"
                                 placeholder="First Name">
                         </div>
                     </div>
 
                     <div class="form-group row">
-                        <div class="col-sm-2 col-md-3 col-xs-6">
+                        <div class="col-sm-2 col-md-3">
                             <label for="txtLastname" class="col-form-label">
                                 <span>Last Name: </span>
                             </label>
                         </div>
-                        <div class="col-sm-3 col-md-4 col-xs-6">
+                        <div class="col-sm-10 col-md-4">
                             <input type="text" id="txtLastname" name="txtLastname" required class="form-control"
                                 placeholder="Last Name">
                         </div>
