--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
     <title>Covid Center Website</title>
 </head>
 <style>
-   .row
-    { display:block;
-    }
     
     </style>
 <body>
     <header>
-        <h1>Welcome to the Covid Assessment Website!</h1>
+        <h1>Welcome to the Covid Assessment Websaite!</h1>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </header>
@@ -23,12 +20,12 @@
                 <fieldset class="border">
                     <legend class="w-auto">Part 1: Patient Information</legend>
                     <div class="form-group row">
-                        <div class="col-sm-2 col-md-3">
+                        <div class="col-sm-2 col-1">
                             <label for="txtFirstname" class="col-form-label">
                                 <span>First Name: </span>
                             </label>
                         </div>
-                        <div class="col-sm-10 col-md-4">
+                        <div class="col-sm-10 col 3">
                             <input type="text" id="txtFirstname" name="txtFirstname" required class="form-control"
                                 placeholder="First Name">
                         </div>
