--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
                 <fieldset class="border">
                     <legend class="w-auto">Part 1: Patient Information</legend>
                     <div class="form-group row">
-                        <div class="col-sm-2 col-1">
+                        <div class="col-sm-2 col-md-1 text-center mb-3 mb-md-0">
                             <label for="txtFirstname" class="col-form-label">
                                 <span>First Name: </span>
                             </label>
                         </div>
-                        <div class="col-sm-10 col 3">
+                        <div class="col-sm-10 col-md-3 text-center">
                             <input type="text" id="txtFirstname" name="txtFirstname" required class="form-control"
                                 placeholder="First Name">
                         </div>
                     </div>
 
                     <div class="form-group row">
-                        <div class="col-sm-2 col-md-3">
+                        <div class="col-sm-2 col-md-1 text-center mb-3 mb-md-0">
                             <label for="txtLastname" class="col-form-label">
                                 <span>Last Name: </span>
                             </label>
                         </div>
-                        <div class="col-sm-10 col-md-4">
+                        <div class="col-sm-10 col-md-3 text-center">
                             <input type="text" id="txtLastname" name="txtLastname" required class="form-control"
                                 placeholder="Last Name">
                         </div>
