--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <article>
             <form>
                 <fieldset class="border">
-                    <legend class="w-auto">Part 1: Patient Information</legend>
+                    <legend class="w-auto">Part 1: Patient Inforamation</legend>
                     <div class="form-group row">
                         <div class="col-sm-2 col-md-1 text-center mb-3 mb-md-0">
                             <label for="txtFirstname" class="col-form-label">
@@ -29,10 +29,9 @@
                             <input type="text" id="txtFirstname" name="txtFirstname" required class="form-control"
                                 placeholder="First Name">
                         </div>
-                    </div>
+                    
 
-                    <div class="form-group row">
-                        <div class="col-sm-2 col-md-1 text-center mb-3 mb-md-0">
+                     <div class="col-sm-2 col-md-1 text-center mb-3 mb-md-0">
                             <label for="txtLastname" class="col-form-label">
                                 <span>Last Name: </span>
                             </label>
@@ -41,8 +40,8 @@
                             <input type="text" id="txtLastname" name="txtLastname" required class="form-control"
                                 placeholder="Last Name">
                         </div>
+                  
                     </div>
-
                     <div>
                         <fieldset class="border form-group">
                             <div class="row">
