--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
                         </fieldset>
                     </div>
                     <div class="row form-group">
-                        <label for="txttel" class="col-sm-2 col-form-label">
+                        <label for="txttel" class="col-sm-2 col-form-label col-md-1 text-center mb-3 mb-md-0">
                             Phone Number:
                         </label>
-                        <div class="col-sm-10">
+                        <div class="col-sm-10 col-md-3 text-center">
                             <input type="tel" id="txttel" name="txttel" pattern="[0-9](3)-[0-9](3)-[0-9](4)"
                                 class="form-control" placeholder="555-555-5555">
                         </div>
-                    </div>
-                    <div class="row form-group">
-                        <label for="txtemail" class="col-sm-2 col-form-label">Email: </label>
-                        <div class="col-sm-10">
+                    
+                    
+                        <label for="txtemail" class="col-sm-2 col-form-label col-md-1 text-center mb-3 mb-md-0">Email: </label>
+                        <div class="col-sm-10 col-md-3 text-center">
                             <input type="email" required id="txtemail" name="txtemail" class="form-control"
                                 placeholder="name@example.com">
                         </div>
