--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                 <fieldset>
                     <legend class="w-auto">Part 3: Other Questions</legend>
                     <div class="row form-group">
-                        <label for="contact" class="col-sm-2 col-form-label">
+                        <label for="contact" class="col-sm-2 col-md-4 text-center mb-3 mb-md-0  col-form-label">
                             <span>Have you had contact (within 6 feet for > 15 minutes), or caring for someone who is
                                 diagnosed <br>
                                 with COVID-19 in the last 14 days and were not wearing proper personal protective
@@ -272,10 +272,7 @@
                                 <option value="Yes">Yes</option>
                             </select>
                         </div>
-                    </div>
-
-                    <div class="row form-group">
-                        <label for="diagnosis" class="col-sm-2 col-form-label">
+                        <label for="diagnosis" class="col-sm-2 col-md-4 text-center mb-3 mb-md-0  col-form-label">
                             Have you had a diagnosis of COVID-19 in the last 10 days?
                         </label>
                         <div>
@@ -289,7 +286,7 @@
                     <div>
                         <fieldset class="border form-group">
                             <div class="row">
-                                <label for="country" class="col-sm-2 col-form-label">
+                                <label for="country" class="col-sm-2 col-md-3 text-center mb-3 mb-md-0  col-form-label">
                                     Have you traveled to any countries in the past 14 days?
                                 </label>
                                 <div>
@@ -299,11 +296,11 @@
                                     </select>
                                 </div>
                                 <div>
-                                    <label for="txtcountry" class="col-sm-2 col-form-label">
+                                    <label for="txtcountry" class="col-sm-2 col-md-3 text-center mb-3 mb-md-0  col-form-label">
                                         Which countries? (separate with commas)
                                     </label>
                                 </div>
-                                <div class="col-sm-10">
+                                <div class="col-sm-10 col-md-3 text-center ">
                                     <input type="text" id="txtcountry" name="txtcountry" required class="form-control"
                                         placeholder="USA">
                                 </div>
@@ -313,7 +310,7 @@
                 </div>
 
                 <div class="row form-group">
-                    <label for="socialized" class="col-sm-2 col-form-label">
+                    <label for="socialized" class="col-sm-2 col-md-3 text-center mb-3 mb-md-0  col-form-label">
                         Have you socialized with a group of 6 or more people in the last 14 days?
                     </label>
                     <div>
@@ -322,12 +319,10 @@
                             <option value="Yes">Yes</option>
                         </select>
                     </div>
-                </div>
-                <div class="row form-group">
                     <label for="txttemp" class="col-sm-2 col-form-label">
                         Current Temperature:
                     </label>
-                    <div class="col-sm-10">
+                    <div class="col-sm-10 col-md-3 text-center">
                         <input type="text" id="txttemp" name="txttemp" required pattern="\d{1,2}(\.\d{0,4})?"
                             class="form-control" placeholder="98.6">
                     </div>
