--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
 <head>
     <title>Covid Center Website</title>
 </head>
-<style>
-
-</style>
 
 <body>
     <header>
@@ -87,8 +84,8 @@
                         </div>
                     </div>
                     <div class="row form-group">
-                        <label for="txtaddress" class="col-sm-2 col-form-label"> <span>Address: </span></label>
-                        <div class="col-md-12 col-lg-6">
+                        <label for="txtaddress" class="col-sm-2 col-md-1 text-center mb-3 mb-md-0 col-form-label"> <span>Address: </span></label>
+                        <div class="col">
                             <input type="text" id="txtaddress" name="txtaddress" class="form-control"
                                 placeholder="Street Name">
                         </div>
@@ -107,7 +104,7 @@
                         </div>
                     </div>
                     <div class="row form-group">
-                        <label for="dob" class="col-sm-2 col-form-label">
+                        <label for="dob" class="col-sm-2 col-md-1 text-center mb-3 mb-md-0 col-form-label">
                             Date of Birth:
                         </label>
                         <div class="col-sm-10">
