--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Covid Center Website</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
@@ -84,7 +85,8 @@
                         </div>
                     </div>
                     <div class="row form-group">
-                        <label for="txtaddress" class="col-sm-2 col-md-1 text-center mb-3 mb-md-0 col-form-label"> <span>Address: </span></label>
+                        <label for="txtaddress" class="col-sm-2 col-md-1 text-center mb-3 mb-md-0 col-form-label">
+                            <span>Address: </span></label>
                         <div class="col">
                             <input type="text" id="txtaddress" name="txtaddress" class="form-control"
                                 placeholder="Street Name">
@@ -297,15 +299,17 @@
                                         <option value="Yes">Yes</option>
                                     </select>
                                 </div>
-                                <div>
-                                    <label for="txtcountry"
-                                        class="col-sm-2 col-md-3 text-center mb-3 mb-md-0  col-form-label">
-                                        Which countries? (separate with commas)
-                                    </label>
-                                </div>
-                                <div class="col-sm-10 col-md-3 text-center ">
-                                    <input type="text" id="txtcountry" name="txtcountry" required class="form-control"
-                                        placeholder="USA">
+                                <div class="invisible">
+                                    <div>
+                                        <label for="txtcountry"
+                                            class="col-sm-2 col-md-3 text-center mb-3 mb-md-0  col-form-label">
+                                            Which countries? (separate with commas)
+                                        </label>
+                                    </div>
+                                    <div class="col-sm-10 col-md-3 text-center ">
+                                        <input type="text" id="txtcountry" name="txtcountry" required
+                                            class="form-control" placeholder="USA">
+                                    </div>
                                 </div>
                             </div>
                     </div>
@@ -341,6 +345,9 @@
     <footer>
         copyright @2021 Covid Center Website
     </footer>
+    <script src="script/script.js">
+
+    </script>
 </body>
 
 </html>
