--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             <input type="date" id="dob" name="dob" required class="form-control"
                                 placeholder="Date of Birth">
 
-                            <div id="doberror" class="col-sm-5 invisible errormsg"></div>
+                            <div id="doberror" class="col-sm-4 invisible errormsg"></div>
                         </div>
                     </div>
                 </fieldset>
@@ -308,9 +308,11 @@
                                             Which countries? (separate with commas)
                                         </label>
                                     </div>
-                                    <div class="col-sm-10 col-md-3 text-center ">
+                                    <div class="col-sm-10 col-md-5 text-center ">
                                         <input type="text" id="txtcountry" name="txtcountry" required
                                             class="form-control" placeholder="USA">
+
+                                            <div id="divCountryError" class="col-sm-5 invisible errormsg"></div>
                                     </div>
                                 </div>
                             </div>
