--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             <input type="date" id="dob" name="dob" required class="form-control"
                                 placeholder="Date of Birth">
 
-                            <div id="doberror" class="col-sm-4 invisible errormsg"></div>
+                            <div id="doberror" class="col-sm-4 invisible errormsg hasError"></div>
                         </div>
                     </div>
                 </fieldset>
