--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
                             Date of Birth:
                         </label>
                         <div class="col-sm-10">
-                            <input type="date" id="dob" name="dob" required class="form-control"
+                            <input type="date" id="dob" name="dob" required class="form-control hasError"
                                 placeholder="Date of Birth">
 
-                            <div id="doberror" class="col-sm-4 invisible errormsg hasError"></div>
+                            <div id="doberror" class="col-sm-4 invisible errormsg"></div>
                         </div>
                     </div>
                 </fieldset>
