--- a/index.html
+++ b/index.html
@@ -105,15 +105,16 @@
                                 placeholder="Zipcode" pattern="[0-9](5)">
                         </div>
                     </div>
+
                     <div class="row form-group">
                         <label for="dob" class="col-sm-2 col-md-1 text-center mb-3 mb-md-0 col-form-label">
                             Date of Birth:
                         </label>
                         <div class="col-sm-10">
-                            <input type="date" id="dob" name="dob" required class="form-control hasError"
+                            <input type="date" id="dob" name="dob" required class="form-control"
                                 placeholder="Date of Birth">
 
-                            <div id="doberror" class="col-sm-4 invisible errormsg"></div>
+                            <div id="doberror" class="col-sm-4 invisible errormsg hasError"></div>
                         </div>
                     </div>
                 </fieldset>
